--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -958,8 +958,10 @@ display: block;
 
 .chevron_down {
   color: #fff !important;
-     /* padding-top: 20px; */
-     margin-left: -26px;
+  padding-top: 3px;
+    margin-left: -26px;
+    vertical-align: middle;
+    position: absolute;
 }
 
 .top-minus-margin {
@@ -2820,6 +2822,10 @@ width: 100%;
   background-color: var(--primary-dark);
 }
 
+#toggle {
+  display: none;
+}
+
 /* =================
 RESPONSIVE STYLING 
 ====================*/
@@ -2850,6 +2856,40 @@ RESPONSIVE STYLING
     flex-direction: column-reverse;
     align-items: center;
   }
+  /* .drop-parent {
+    margin-top: -50px;
+  } */
+
+  .chevron_down {
+    margin-top: -42px;
+    margin-left: 0px;
+    left: 12%;
+    top: 0%;
+    position: absolute;
+  }
+
+  .dropdown-list {
+    position: relative;
+    right: -2%;
+    top: 8px;
+  } 
+
+  .drop-parent, .chevron_down {
+    width: 100%;
+    display: block;
+  }
+
+  #toggle:checked ~ .chevron_down {
+    margin-top: -36px;
+    left: 12%;
+    top: -2%;
+  }
+    
+
+
+  .drop-parent {
+    padding: 0px;
+  }
 }
 
 @media (max-width: 900px) {
@@ -2865,6 +2905,12 @@ RESPONSIVE STYLING
   }
 }
 
+@media (max-width: 635px) {
+  .chevron_down {
+    margin-left: 20px;
+  }
+}
+
 @media (max-width: 550px) {
   .youtube_vid_container {
    width: 100%;
@@ -2873,12 +2919,18 @@ RESPONSIVE STYLING
 .faculty_members-flex {
   justify-content: center;
 }
+.chevron_down {
+  margin-left: 23px;
+}
 }
 
 @media (max-width: 480px) {
   .stat {
     width: 163px;
   }
+  .chevron_down {
+    margin-left: 43px;
+}
 
 }
 
